update base directory

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title> Site Bricolage - </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="./CSS/stylesheet.css" rel="stylesheet">
+        <link href="../CSS/stylesheet.css" rel="stylesheet">
         
     </head>
     <body>
@@ -16,6 +16,13 @@
 
         <!-- Content -->
         <section id="layout-content">
+
+            <h1>
+                Hello world !
+            </h1>
+            <p>
+                c'est une première version
+            </p>
         </section>
 
         <!-- Footer -->
