simple basics design for all pages

--- a/index.html
+++ b/index.html
@@ -11,22 +11,16 @@
     <body>
 
         <!-- Header (Menu) -->
-        <header id="layout-header">
+        <header class="layout-header">
+            <h2>Titre</h2>
         </header>
 
         <!-- Content -->
-        <section id="layout-content">
-
-            <h1>
-                Hello world !
-            </h1>
-            <p>
-                c'est une première version
-            </p>
+        <section class="layout-content">
         </section>
 
         <!-- Footer -->
-        <footer id="layout-footer">
+        <footer class="layout-footer">
         </footer>
 
         <!-- Scripts -->
