--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta charset="utf-8">
         <title> Site Bricolage - </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="../CSS/stylesheet.css" rel="stylesheet">
+        <link href="./CSS/stylesheet.css" rel="stylesheet">
         
     </head>
     <body>
 
         <!-- Header (Menu) -->
         <header class="layout-header">
-            <h2>Titre</h2>
+            
         </header>
 
         <!-- Content -->
@@ -21,6 +21,9 @@
 
         <!-- Footer -->
         <footer class="layout-footer">
+            <p class="muted credit">
+                Jagline, Picart, Régné, Lorre &copy; 2020 - 2021
+            </p>
         </footer>
 
         <!-- Scripts -->
