--- a/src/carte_magasin.html
+++ b/src/carte_magasin.html
@@ -12,15 +12,22 @@
 
         <!-- Header (Menu) -->
         <header class="layout-header">
-            <h2>Titre</h2>
+        	<div class="logo">
+        		<h2>Titre</h2>
+        	</div>
         </header>
 
         <!-- Content -->
         <section class="layout-content">
         </section>
 
+        
+
         <!-- Footer -->
         <footer class="layout-footer">
+        	<p class="muted credit">
+        		Jagline, Picart, Régné, Lorre &copy; 2020 - 2021
+        	</p>
         </footer>
 
         <!-- Scripts -->
