--- a/index.html
+++ b/index.html
@@ -3,20 +3,31 @@
     <head>
         <!-- Head -->
         <meta charset="utf-8">
-        <title> Site Bricolage - </title>
+        <title> BricoCasto - </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="../CSS/stylesheet.css" rel="stylesheet">
+        <link href="./CSS/stylesheet.css" rel="stylesheet">
         
     </head>
     <body>
 
         <!-- Header (Menu) -->
         <header class="layout-header">
-            <h2>Titre</h2>
+            <div class="header">
+                <img src="./img/home.jpg" class="logo" style="display: none;">
+                <img src="./img/BricoCasto.png" class="logo">
+            </div>
         </header>
 
         <!-- Content -->
         <section class="layout-content">
+            <div>
+                <u1>
+                    <li><a href="src/carte_magasin.html">Carte du Magasin</a></li>
+                    <li><a href="src/carte_rayon.html">Carte du Rayon Actuel</a></li>
+                    <li><a href="src/detail_produit.html">Conseil Achat produit adapté</a></li>
+                </u1>
+
+            </div>
         </section>
 
         <!-- Footer -->
