--- a/src/carte_rayon.html
+++ b/src/carte_rayon.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Head -->
         <meta charset="utf-8">
-        <title> Site Bricolage - </title>
+        <title> BricoCasto - </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../CSS/stylesheet.css" rel="stylesheet">
         
@@ -12,7 +12,10 @@
 
         <!-- Header (Menu) -->
         <header class="layout-header">
-            <h2>Titre</h2>
+            <div class="header">
+                <a href="../index.html" ><img src="../img/home.jpg" class="logo"></a>
+                <img src="../img/BricoCasto.png" class="logo">
+            </div>
         </header>
 
         <!-- Content -->
