--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Head -->
         <meta charset="utf-8">
-        <title> Site Bricolage - </title>
+        <title> BricoCasto - </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../CSS/stylesheet.css" rel="stylesheet">
         
@@ -12,13 +12,17 @@
 
         <!-- Header (Menu) -->
         <header class="layout-header">
-            <dir>
-                <h1>Titre</h1>
-            </dir>
+            <div class="header">
+                <a href="../index.html" ><img src="../img/home.jpg" class="logo"></a>
+                <img src="../img/BricoCasto.png" class="logo">
+            </div>
         </header>
+
+        
 
         <!-- Content -->
         <section class="layout-content">
+            <h1>Titre</h1>
         </section>
 
         <!-- Footer -->
