header with right colors

--- a/src/carte_magasin.html
+++ b/src/carte_magasin.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Head -->
         <meta charset="utf-8">
-        <title> BricoCasto - </title>
+        <title> BricoCasto - Carte</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../CSS/stylesheet.css" rel="stylesheet">
         
@@ -15,6 +15,9 @@
             <div class="header">
                 <a href="../index.html" ><img src="../img/home.jpg" class="logo"></a>
                 <img src="../img/BricoCasto.png" class="logo">
+                <div class="logo" style="visibility: hidden;">
+                    <p>Rayon </p>
+                </div>
             </div>
         </header>
 
