--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Head -->
         <meta charset="utf-8">
-        <title> BricoCasto - </title>
+        <title> BricoCasto - Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./CSS/stylesheet.css" rel="stylesheet">
         
@@ -13,13 +13,16 @@
         <!-- Header (Menu) -->
         <header class="layout-header">
             <div class="header">
-                <img src="./img/home.jpg" class="logo" style="display: none;">
+                <img src="../img/home.jpg" class="logo" style="display: none;"></a>
                 <img src="./img/BricoCasto.png" class="logo">
+                <div class="logo" style="display: none;">
+                    <p>Rayon </p>
+                </div>
             </div>
         </header>
 
         <!-- Content -->
-        <section class="layout-content">
+        <section class="section">
             <div>
                 <u1>
                     <li><a href="src/carte_magasin.html">Carte du Magasin</a></li>
