--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Head -->
         <meta charset="utf-8">
-        <title> BricoCasto - </title>
+        <title> BricoCasto - Conseil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../CSS/stylesheet.css" rel="stylesheet">
         
@@ -15,14 +15,17 @@
             <div class="header">
                 <a href="../index.html" ><img src="../img/home.jpg" class="logo"></a>
                 <img src="../img/BricoCasto.png" class="logo">
+                <div class="logo">
+                    <h3>Rayon Entretien du Jardin</h3>
+                </div>
             </div>
         </header>
 
         
 
         <!-- Content -->
-        <section class="layout-content">
-            <h1>Titre</h1>
+        <section class="section">
+            <h1>Titre</h1>            
         </section>
 
         <!-- Footer -->
