adding date with js

--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -29,10 +29,16 @@
         </section>
 
         <!-- Footer -->
-        <footer class="layout-footer">
-            <p class="muted credit">
-                Jagline, Picart, Régné, Lorre &copy; 2020 - 2021
-            </p>
+        <footer class="layout-footer">  
+            <div class="footer">
+                <div class="container">
+                   <hr class="hrstyle" />
+                    <p class="inline">BricoCasto</p>
+                    <p class="muted inline">
+                          Jagline, Picart, Régné, Lorre &copy; 2020 - 2021
+                    </p> 
+                </div>
+            </div>
         </footer>
 
         <!-- Scripts -->
