--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
             <div class="footer">
                 <div class="container">
                    <hr class="hrstyle" />
+                    <div class="float-left inline">
+                        <p id="date"></p>
+                    </div>
                     <p class="inline">BricoCasto</p>
-                    <p class="muted inline">
+                    <p class="float-right inline">
                           Jagline, Picart, Régné, Lorre &copy; 2020 - 2021
                     </p> 
                 </div>
@@ -48,7 +51,7 @@
         </footer>
 
         <!-- Scripts -->
-        
+        <script src="./JS/javascript.js"></script>
 
     </body>
 </html>
