--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -33,8 +33,11 @@
             <div class="footer">
                 <div class="container">
                    <hr class="hrstyle" />
+                    <div class="float-left inline">
+                        <p id="date"></p>
+                    </div>
                     <p class="inline">BricoCasto</p>
-                    <p class="muted inline">
+                    <p class="float-right inline">
                           Jagline, Picart, Régné, Lorre &copy; 2020 - 2021
                     </p> 
                 </div>
