--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Header (Menu) -->
         <header class="layout-header">
             <div class="header">
-                <img src="../img/home.jpg" class="logo" style="display: none;"></a>
+                <img src="../img/home.jpg" class="logo" style="display: none;">
                 <img src="./img/BricoCasto.png" class="logo">
                 <div class="logo" style="display: none;">
                     <p>Rayon </p>
@@ -40,8 +40,8 @@
                 <div class="container">
                    <hr class="hrstyle" />
                     <p class="inline">BricoCasto</p>
-                    <p class="muted inline">
-                          Jagline, Picart, Régné, Lorre &copy; 2020 - 2021
+                    <p class="float-right inline">
+                          Jagline, Picart, Régné, Lorre &copy; CAI 2020 - 2021
                     </p> 
                 </div>
             </div>
