--- a/src/carte_magasin.html
+++ b/src/carte_magasin.html
@@ -12,7 +12,6 @@
 
         <!-- Header (Menu) -->
         <header class="layout-header">
-
             <div class="header">
                 <a href="../index.html" ><img src="../img/home.jpg" class="logo"></a>
                 <img src="../img/BricoCasto.png" class="logo">
@@ -27,14 +26,14 @@
             <div class="container">
                 <div class="wrap">
                    <div class="search">
-                      <input type="text" class="searchTerm" placeholder="Que recherchez-vous?">
-                      <button type="submit" class="searchButton">
-                        <p> Rechercher</p>
-                     </button>
+                        <input type="text" class="searchTerm" placeholder="Que recherchez-vous?">
+                        <button type="submit" class="searchButton">
+                            <p> Rechercher</p>
+                        </button>
                    </div>
                 </div>
-                <div>
-                    <img src="../img/cartemagasin.jpg">
+                <div class="carte">
+                    <img src="../img/cartemagasin.jpg" width="auto" height="100%">
                 </div>
             </div>
         </section>
