avancement page rayon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Header (Menu) -->
         <header class="layout-header">
             <div class="header">
-                <img src="../img/home.jpg" class="logo" style="display: none;"></a>
+                <img src="../img/home.jpg" class="logo" style="display: none;">
                 <img src="./img/BricoCasto.png" class="logo">
                 <div class="logo" style="display: none;">
                     <p>Rayon </p>
