update header footer dinamyc no srcoll

--- a/src/carte_magasin.html
+++ b/src/carte_magasin.html
@@ -13,10 +13,10 @@
         <!-- Header (Menu) -->
         <header class="layout-header">
             <div class="header">
-                <a href="../index.html" ><img src="../img/home.jpg" class="logo"></a>
+                <a href="../index.html" ><img src="../img/home.jpg" class="home"></a>
                 <img src="../img/BricoCasto.png" class="logo">
-                <div class="logo" style="visibility: hidden;">
-                    <p>Rayon </p>
+                <div class="rayon" ><!-- style="visibility: hidden;" -->
+                    <h3>Rayon Electricité</h3>
                 </div>
             </div>
         </header>
@@ -44,7 +44,7 @@
         <footer class="layout-footer">  
             <div class="footer">
                 <div class="container">
-                   <hr class="hrstyle" />
+                    <hr class="hrstyle" />
                     <div class="float-left inline">
                         <p id="date"></p>
                     </div>
