--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
         <!-- Header (Menu) -->
         <header class="layout-header">
             <div class="header">
-                <img src="../img/home.jpg" class="logo" style="display: none;">
-                <img src="./img/BricoCasto.png" class="logo">
-                <div class="logo" style="display: none;">
-                    <p>Rayon </p>
+                <a href="../index.html" ><img src="../img/home.jpg" class="home" style="visibility: hidden;"></a>
+                <img src="../img/BricoCasto.png" class="logo">
+                <div class="rayon" style="visibility: hidden;" >
+                    <h3>Rayon Electricité</h3>
                 </div>
             </div>
-
         </header>
 
         <!-- Content -->
