--- a/src/carte_magasin.html
+++ b/src/carte_magasin.html
@@ -15,7 +15,7 @@
             <div class="header">
                 <a href="../index.html" ><img src="../img/home.jpg" class="home"></a>
                 <img src="../img/BricoCasto.png" class="logo">
-                <div class="rayon" ><!-- style="visibility: hidden;" -->
+                <div class="rayon" style="visibility: hidden;" >
                     <h3>Rayon Electricité</h3>
                 </div>
             </div>
