--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -13,9 +13,9 @@
         <!-- Header (Menu) -->
         <header class="layout-header">
             <div class="header">
-                <a href="../index.html" ><img src="../img/home.jpg" class="logo"></a>
+                <a href="../index.html" ><img src="../img/home.jpg" class="home"></a>
                 <img src="../img/BricoCasto.png" class="logo">
-                <div class="logo">
+                <div class="rayon" >
                     <h3>Rayon Entretien du Jardin</h3>
                 </div>
             </div>
