--- a/src/carte_rayon.html
+++ b/src/carte_rayon.html
@@ -24,7 +24,7 @@
 
         <section class="content">
             <div class="top">
-                <img src="../img/rayon1.png" alt="rayon1" class="rayon">
+                <img src="../img/rayon1.png" alt="rayon1" class="rayonpict">
                 
             </div>
 
@@ -37,7 +37,7 @@
             </div>
 
             <div class="bottom">
-                <img src="../img/rayon2.png" alt="rayon2" class="rayon">
+                <img src="../img/rayon2.png" alt="rayon2" class="rayonpict">
             </div>
 
             <div class="inputField">
