barre de recherche

--- a/src/carte_rayon.html
+++ b/src/carte_rayon.html
@@ -40,11 +40,14 @@
                 <img src="../img/rayon2.png" alt="rayon2" class="rayonpict">
             </div>
 
-            <div class="inputField">
-                <form>
-                <p><input type="text" name="produit_recherche" id="produit_recherche" placeholder="Ex : Tronçonneuse" size="150" /></p>
-                </form>
-            </div>
+            <div class="wrap">
+                   <div class="search">
+                        <input type="text" class="searchTerm" placeholder="Que recherchez-vous?">
+                        <button type="submit" class="searchButton">
+                            <p> Rechercher</p>
+                        </button>
+                   </div>
+                </div>
             
 
 
