--- a/index.html
+++ b/index.html
@@ -23,17 +23,31 @@
         </header>
 
         <!-- Content -->
-        <section class="section">
-            <div>
-                <u1>
-                    <li><a href="src/carte_magasin.html">Carte du Magasin</a></li>
-                    <li><a href="src/carte_rayon.html">Carte du Rayon Actuel</a></li>
-                    <li><a href="src/detail_produit.html">Conseil Achat produit adapté</a></li>
-                </u1>
-
+        
+        <div id="conteneur_vert">
+            <div id="conteneur1">
+                <div class="message">
+                    <p>Bonjour !<br/>Désirez-vous...</p>
+                </div>
             </div>
-        </section>
 
+            <div id="conteneur2">
+                <div class="carte_rayon">
+                    <a href="src/carte_rayon.html">La disposition du rayon</a>
+                </div>
+
+                <div class="detail_produit">
+                    <a href="src/detail_produit.html">Trouver LE meilleur produit</a>
+                </div>
+            </div>
+
+            <div id="conteneur3">
+                <div class="carte_magasin">
+                    <a href="src/carte_magasin.html">Carte du Magasin</a>
+                </div>
+            </div>
+        </div>
+        
         <!-- Footer -->
         <footer class="layout-footer">  
             <div class="footer">
