--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title> BricoCasto - Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./CSS/stylesheet.css" rel="stylesheet">
+        <link href="./CSS/css_accueuil.css" rel="stylesheet">
         
     </head>
     <body>
