--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <!-- Header (Menu) -->
         <header class="layout-header">
             <div class="header">
-                <a href="../index.html" ><img src="../img/home.jpg" class="home" style="visibility: hidden;"></a>
-                <img src="../img/BricoCasto.png" class="logo">
+                <a href="./index.html" ><img src="./img/home.jpg" class="home" style="visibility: hidden;"></a>
+                <img src="./img/BricoCasto.png" class="logo">
                 <div class="rayon" style="visibility: hidden;" >
                     <h3>Rayon Electricité</h3>
                 </div>
