--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -45,7 +45,7 @@
         </footer>
 
         <!-- Scripts -->
-        
+        <script src="../JS/javascript.js"></script>        
 
     </body>
 </html>
