taille ecran + debut js

--- a/src/carte_rayon.html
+++ b/src/carte_rayon.html
@@ -24,12 +24,12 @@
 
         <section class="content">
             <div class="top">
-                <img src="../img/rayon1.png" alt="rayon1" class="rayonpict">
+                <img src="../img/rayon1.png" alt="rayon1" class="rayonpict" id="rayonpict1">
                 
             </div>
 
             <div class="center">
-                <div id="localisation_borne"><img src="../img/youAreHere.png" alt="localisation_borne"></div>
+                <div id="localisation_borne"><img src="../img/youAreHere.png" alt="localisation_borne" id="img_loc"></div>
                 <div id="legende">
                     <img src="../img/red_circle.png" alt="legende" align="right" class="margin_legend">
                     <p class="margin_legend">Emplacement du produit recherché</p>
@@ -37,13 +37,13 @@
             </div>
 
             <div class="bottom">
-                <img src="../img/rayon2.png" alt="rayon2" class="rayonpict">
+                <img src="../img/rayon2.png" alt="rayon2" class="rayonpict" id="rayonpict2">
             </div>
 
             <div class="wrap">
                    <div class="search">
-                        <input type="text" class="searchTerm" placeholder="Que recherchez-vous?">
-                        <button type="submit" class="searchButton">
+                        <input type="text" id="rechercheRayon" onchange="update_val()" class="searchTerm" placeholder="Que recherchez-vous?">
+                        <button type="submit" class="searchButton" id="btnRayon">
                             <p> Rechercher</p>
                         </button>
                    </div>
@@ -73,6 +73,9 @@
 
 
 
+        <!-- Scripts -->
+
+        <script type="text/javascript" src="../JS/rayon.js"></script>     
 
 
     </body>
