--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title> BricoCasto - Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./CSS/stylesheet.css" rel="stylesheet">
-        <link href="./CSS/css_accueuil.css" rel="stylesheet">
+        <link href="./CSS/css_accueil.css" rel="stylesheet">
         
     </head>
     <body>
@@ -47,7 +47,7 @@
 
         <!-- Script -->
 
-        <script src="./JS/JS_accueuil.js" ></script>
+        <script src="./JS/JS_accueil.js" ></script>
         
         <!-- Footer -->
         <footer class="layout-footer">  
