comments on product page

--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -13,6 +13,7 @@
     <!-- My body contains 1 header, 1 footer and 2 sections between. Each with different divisions+ -->
 
         <!-- Header -->
+        <!-- it contains the home logo to go back to the first page, the shop's logo and the indication of the place we are-->
         <header class="layout-header">
             <div class="header">
                 <a href="../index.html" ><img src="../img/home.jpg" class="home"></a>
@@ -68,7 +69,7 @@
                 </h4>
                 <div class="Surface">
 
-                    <label for="surface">Surface de terrain</label><input type="text" name="surface">
+                    <label for="surface">Surface de terrain</label><input type="number" name="surface">
                     <select name="surface" id ="surface" title="1ha = 10 000m²">
                         <option value="m2" title="1ha = 10 000m²">m²</option>
                         <option value="ha" title="1ha = 10 000m²">ha</option>
@@ -173,6 +174,7 @@
                     </div>
                 </div>
 
+                <!-- Submit -->
                 <div class="resultat" >
                     <h3 class="element">Tout Voir</h3>  
                     </div>
