update page and js

--- a/src/carte_magasin.html
+++ b/src/carte_magasin.html
@@ -39,7 +39,7 @@
                             <option>Jardin</option>
                         </select>
 
-                        <select name="produit" style="width: 100%">
+                        <select name="produit" onChange='Trouver_btn_aff(this.form)' style="width: 100%">
                             <option>Produit ?  Choisissez !</option>
                             <option></option>
                             <option></option>
