--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -132,7 +132,7 @@
         <!-- Results of search -->
         <section>
             <div class= "result">
-                <div class="resultat" >
+                <div class="resultat" onclick="displayAlert()" >
                     <h3 class="element">Meilleur Choix</h3>
                     <img src="../img/tronconneuse1.png"class="element" >
                     <div class="spec">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
 
-                <div class="resultat" >
+                <div class="resultat" onclick="displayAlert()">
                     <h3 class="element">Second Meilleur Choix</h3>
                     <img src="../img/tronconneuse2.jfif"class="element" >
                     <div class="spec">
@@ -160,7 +160,7 @@
                     </div>
                 </div>
 
-                <div class="resultat" >
+                <div class="resultat" onclick="displayAlert()">
                     <h3 class="element">Troisième Meilleur Choix</h3>
                     <img src="../img/tronconneuse3.jpg"class="element" >
                     <div class="spec">
@@ -175,7 +175,7 @@
                 </div>
 
                 <!-- Submit -->
-                <div class="resultat" >
+                <div class="resultat" onclick="displayAlert()">
                     <h3 class="element">Tout Voir</h3>  
                     </div>
                 </div>
