--- a/src/carte_magasin.html
+++ b/src/carte_magasin.html
@@ -16,7 +16,7 @@
                 <a href="../index.html" ><img src="../img/home.jpg" class="home"></a>
                 <img src="../img/BricoCasto.png" class="logo">
                 <div class="rayon" >
-                    <h3>Rayon Jardin</h3>
+                    <h3>Rayon Entretien du jardin</h3>
                 </div>
             </div>
         </header>
