--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -13,6 +13,8 @@
     <!-- My body contains 1 header, 1 footer and 2 sections between. Each with different divisions+ -->
 
         <!-- Header -->
+        <!-- Concepteurs : Corentin Régné(correction pour dynamisme) et Lénaël Jagline  -->
+        <!-- affichage (ou non) et lien de Home, BricoCasto et le nom du rayon -->
         <header class="layout-header">
             <div class="header">
                 <a href="../index.html" ><img src="../img/home.jpg" class="home"></a>
@@ -183,6 +185,9 @@
         
 
         <!-- Footer -->
+        <!-- Concepteur : Corentin Régné -->
+        <!-- footer dynamique mais comprotant des limites pour la taille de fenêtre, affichage de la date, du nom du magasin, des noms des developpeurs
+         et de l'année de construction de l'interface -->
         <footer class="layout-footer">  
             <div class="footer">
                 <div class="container">
