--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <div id="conteneur_vert1">
             <div id="conteneur1">
                 <div id="conteneur_vert2">
-                    <a href="#fr" data-reload><img src="./img/france_flag.png"></a>
-                    <a href="#en" data-reload><img src="./img/uk_flag.png"></a>
+                    <a href="#fr" language='français' class="active"><img src="./img/france_flag.png"></a>
+                    <a href="#en" language='english'><img src="./img/uk_flag.png"></a>
                 </div>
 
-                <p id="message">Bonjour !<br/>Désirez-vous...</p>
+                <p id="message">Bonjour ! Désirez-vous...</p>
 
                 <div id="conteneur_vert3">
-                    <p id="aide">?</p>
+                    <p onClick="doSomething()" id="aide">?</p>
                 </div>
             </div>
 
