fixing grammatical error

--- a/src/detail_produit.html
+++ b/src/detail_produit.html
@@ -190,7 +190,7 @@
 
         <!-- Footer -->
         <!-- Concepteur : Corentin Régné -->
-        <!-- footer dynamique mais comprotant des limites pour la taille de fenêtre, affichage de la date, du nom du magasin, des noms des developpeurs
+        <!-- footer dynamique mais comportant des limites pour la taille de fenêtre, affichage de la date, du nom du magasin, des noms des developpeurs
          et de l'année de construction de l'interface -->
         <footer class="layout-footer">  
             <div class="footer">
