--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
         
         <div id="conteneur_vert1">
             <div id="conteneur1">
-                <div id="conteneur_vert2">
+                <div id="conteneur_vert2"> <!-- Contient les deux boutons pour changer de langue -->
                     <a href="#fr" language='français' class="active"><img src="./img/france_flag.png"></a>
                     <a href="#en" language='english'><img src="./img/uk_flag.png"></a>
                 </div>
 
-                <p id="message">Bonjour ! Désirez-vous...</p>
+                <p id="message">Bonjour ! Désirez-vous...</p> <!-- Texte d'accueil -->
 
-                <div id="conteneur_vert3">
+                <div id="conteneur_vert3"> <!-- Bouton d'appel du vendeur -->
                     <p onClick="doSomething()" id="aide">?</p>
                 </div>
             </div>
 
-            <div id="conteneur2">
+            <div id="conteneur2"> <!-- Contient le lien vers la carte du rayon ainsi que la recherche avancée dudit rayon -->
                 <a id="carte_rayon", href="src/carte_rayon.html">La disposition du rayon</a>
                 <a id="detail_produit", href="src/detail_produit.html">Trouver LE meilleur produit</a>
             </div>
 
-            <div id="conteneur3">
+            <div id="conteneur3"> <!-- Renvoie à a carte du magasin -->
                 <a id="carte_magasin", href="src/carte_magasin.html">Carte du Magasin</a>
             </div>
         </div>
